--- a/vocabs-best-practices-note.adoc
+++ b/vocabs-best-practices-note.adoc
@@ -14,14 +14,12 @@ __^1^Biological and Chemical Oceanography Data Management Office, Woods Hole Oce
 
 == Abstract
 
-__The ocean sciences have used controlled vocabularies and best practices for Linked Data on the Web to provide common, shared descriptions of dataset parameters. The NERC Parameter Usage Vocabulary (P01) stands as a relevant, comprehensive resource for describing the parameters of a dataset enabling improved discovery and interoperability of ocean data. With its publicized semantic model, P01 is easier to adopt at varying levels of required expressivity due to efforts at the British Oceanographic Data Center (BODC) to enable the contribution of new terms. external metadata curators at scale if an efficient and sustainable workflow to contribute new structured descriptions of marine data observations can be developed. In March 2019, a workshop was convened at the Marine Institute in Dublin, Ireland to investigate this capability by aligning the efforts of data curators, curators of authoritative thesauri, and knowledge modelers developing reference ontologies. These three types of agents act as curators of knowledge within their own organizational structures with processes that work for governing structured data. However, the exchange of this information between organizations creates a new virtual organization[1] that needs its own effective workflows for sending, receiving and digesting structured data.  This latter case is likely to grow more dominant in the emerging world of linked and distributed data; thus, developing stable inter-organizational workflows is a priority.  The workshop will not focus on the internal process of each agent, but on the transport vectors between agents to ensure efficient delivery and assimilation of data with respect to each agent’s internal governance needs.  As a result, the information exchange between these types of agents enables a new capability in science to deliver outcomes that meet initiatives such as United Nations - Sustainable Development Goals (SDGs)[2], Global Ocean Observing System - Essential Ocean Variables (EOVs)[3], and the Group on Earth Observations - Essential Biodiversity Variables (EBVs)[4].__
+__The ocean sciences have used controlled vocabularies and best practices for Linked Data on the Web to provide common, shared descriptions of dataset parameters. The NERC Parameter Usage Vocabulary (PUV) stands as a relevant, comprehensive resource for describing the parameters of a dataset enabling improved discovery and interoperability of ocean data. With its publicized semantic model[5], the PUV is easier to adopt at varying levels of need. Coupled with efforts to make it easier for community-contributed terms to be added to the vocabulary, the PUV is poised for increased adoption by external metadata curators and alignment to domain ontologies. With the British Oceanographic Data Centre (BODC), the host institution for the PUV, dedicated to making adoption of the vocabulary scalable across data curators and domain ontologies, a workshop was convened in March 2019 at the Marine Institute in Dublin, Ireland to investigate this capability by aligning the efforts of data curators, curators of authoritative thesauri, and knowledge modelers developing reference ontologies. As these three agents individually curate dataset parameter descriptions adopting some reference to related terms in PUV bridges the semantic gaps between them that prevent cross-cutting data discovery and data integrations on a global scale. Further, adoption from data repository to authoritative thesaurii is a more manageable step given the throughput of its data submissions than directly to refernce ontologies. Coincidentally, the step from thesaurii to reference ontology is made manageable given use cases to that identify groups of parameters that could benefit grom ontological mappings. The exchange of information that could occur through PUV creates a new virtual organization[1] that needs its own effective workflows for sending, receiving and digesting structured data.  This latter case is likely to grow more dominant in the emerging world of linked and distributed data; thus, developing stable inter-organizational workflows is a priority.  The workshop will not focus on the internal process of each agent, but on the transport vectors between agents to ensure efficient delivery and assimilation of data with respect to each agent’s internal governance needs.  As a result, the information exchange between these types of agents enables a new capability in science to deliver outcomes that meet initiatives such as United Nations - Sustainable Development Goals (SDGs)[2], Global Ocean Observing System - Essential Ocean Variables (EOVs)[3], and the Group on Earth Observations - Essential Biodiversity Variables (EBVs)[4].__
 
 == Background
 
 Information sharing, synthesis, and packaging is critical to delivering knowledge in multi-disciplinary contexts within research, but even more so when engaging with multi-stakeholder, cross-cutting initiatives like the EOVs, EBVs, and SDGs.  To do so, machine-readable ontologies harmonizing the meaning (i.e. semantics) behind each stakeholder’s terminology and metadata are required to deliver accurate information to these initiatives.  However, the development of high quality ontologies often cannot keep pace with the complete volume of observation types created in modern, integrative data systems. .  However, we have realized that a system combining 1) ontologies to handle semantically dense or problematic terminology and 2) authoritative thesauri to thematically describe and categorize more straightforward observations, will provide a basis to boost FAIRness in a practical and sustainable way .   In this system, ontologies interface with data curators and thesauri developers when the rich, machine-readable expressiveness of their ontologies is needed to resolve ambiguity or allow more flexible information handling than thesauri can provide. Further,  analytics term usage in the system can identify popular thesauri terms as high-value targets for ontologies to expand on. .  Consequently, the most active, day-to-day interface in this system is that between data curators and thesauri. Here, there is a need for efficiency gains that respect the governance processes of the thesauri, but deliver expedited results for data curators, leveraging tools for automatic term creation along constrained semantic frameworks (which ease coordination with ontology developers). As a result, the thesauri become the structured glue between instance data held by curators and the reference ontologies for delivering the outcomes required by SDGs, EOVs, and research themes.
 
-
-Figure 1. Example of organizational governance from ISO 19135 - Procedures for item registration.[5]
 
 
 == Expected Results
@@ -53,4 +51,6 @@ The work described in this paper was funded through the National Science Foundat
 
 [4] What are EBVs? – GEO BON. (n.d.). Retrieved April 8, 2019, from https://geobon.org/ebvs/what-are-ebvs/
 
-[5] International Standards Organization. (2015, October). ISO 19135-1:2015 - Geographic information -- Procedures for item registration -- Part 1: Fundamentals. Retrieved April 8, 2019, from http://www.iso.org/cms/render/live/en/sites/isoorg/contents/data/standard/05/47/54721.html
+[5] Moncoiffé, G., & Kokkinaki, A. (2018). The BODC Parameter Usage Vocabulary (PUV) semantic model exposed. Bollettino Di Geofisica, Vol. 59, Supplement 1, 36. Retrieved from http://www3.ogs.trieste.it/bgta/provapage.php?id_articolo=757
+
+
