Added temporary outline
Outline to guide writing process so we know where to start and where we are going

--- a/vocabs-best-practices-note.adoc
+++ b/vocabs-best-practices-note.adoc
@@ -10,11 +10,24 @@ Gwen Moncoiffe^5^;
 Shannon Rauch^1^;
 Rob Thomas^3^.
 
-__^1^Biological and Chemical Oceanography Data Management Office, Woods Hole Oceanographic Instititution, United States of America; ^2^Alfred Wegner Institute, Germany; ^3^Marine Institute, Ireland; ^4^Consortium of Ocean Leadership; ^5^British Oceanographic Data Centre, United Kingdom.__
+__^1^Biological and Chemical Oceanography Data Management Office, Woods Hole Oceanographic Instititution, United States of America +
+^2^Alfred Wegner Institute, Germany +
+^3^Marine Institute, Ireland +
+^4^Consortium of Ocean Leadership +
+^5^British Oceanographic Data Centre, United Kingdom__ +
+
+=== Outline
+* _long history of controlled vocabs in ocean sciences_
+* _however, answering the cross-disciplinary questions to environment's grand challenges is difficult without interoperability between data repositories using reference ontologies_
+* _(bottom-up difficulty) velocity of data contributed at repositories makes it difficult to scale usage parameters up to ontologies_
+* _(top-down difficulty) further, its difficult to globally align repositories around one ontology_
+* _authoritative thesaurii could play a critical role in solving the challenges between repositories and reference ontologies_
+* _in March 2019, a workshop was convened to explore the possibilities for scaling repository adoption of concepts in thesaurii and for scaling the elevation of topical thesaurii terms to reference ontologies_
+* _by vertically aligning data repositories, authoritative thesaurii, and reference ontologies, repositories inherit the semantics of reference ontologies and reference ontologies can be used to discover and integrate data form repositories for answering the grand challenges in multi-disciplinary science_
 
 == Abstract
 
-__The ocean sciences have used controlled vocabularies and best practices for Linked Data on the Web to provide common, shared descriptions of dataset parameters. The NERC Parameter Usage Vocabulary (PUV) stands as a relevant, comprehensive resource for describing the parameters of a dataset enabling improved discovery and interoperability of ocean data. With its publicized semantic model[5], the PUV is easier to adopt at varying levels of need. Coupled with efforts to make it easier for community-contributed terms to be added to the vocabulary, the PUV is poised for increased adoption by external metadata curators and alignment to domain ontologies. With the British Oceanographic Data Centre (BODC), the host institution for the PUV, dedicated to making adoption of the vocabulary scalable across data curators and domain ontologies, a workshop was convened in March 2019 at the Marine Institute in Dublin, Ireland to investigate this capability by aligning the efforts of data curators, curators of authoritative thesauri, and knowledge modelers developing reference ontologies. As these three agents individually curate dataset parameter descriptions adopting some reference to related terms in PUV bridges the semantic gaps between them that prevent cross-cutting data discovery and data integrations on a global scale. Further, adoption from data repository to authoritative thesaurii is a more manageable step given the throughput of its data submissions than directly to refernce ontologies. Coincidentally, the step from thesaurii to reference ontology is made manageable given use cases to that identify groups of parameters that could benefit grom ontological mappings. The exchange of information that could occur through PUV creates a new virtual organization[1] that needs its own effective workflows for sending, receiving and digesting structured data.  This latter case is likely to grow more dominant in the emerging world of linked and distributed data; thus, developing stable inter-organizational workflows is a priority.  The workshop will not focus on the internal process of each agent, but on the transport vectors between agents to ensure efficient delivery and assimilation of data with respect to each agent’s internal governance needs.  As a result, the information exchange between these types of agents enables a new capability in science to deliver outcomes that meet initiatives such as United Nations - Sustainable Development Goals (SDGs)[2], Global Ocean Observing System - Essential Ocean Variables (EOVs)[3], and the Group on Earth Observations - Essential Biodiversity Variables (EBVs)[4].__
+The ocean sciences have a long history of using controlled vocabularies and best practices for Linked Data on the Web to describe dataset parameters. The NERC Parameter Usage Vocabulary (PUV) stands as a relevant, comprehensive resource for describing the parameters of a dataset enabling improved discovery and interoperability of ocean data. With its publicized semantic model[5], the PUV is easier to adopt at varying levels of need. Coupled with efforts to make it easier for community-contributed terms to be added to the vocabulary, the PUV is poised for increased adoption by external metadata curators and alignment to domain ontologies. With the British Oceanographic Data Centre (BODC), the host institution for the PUV, dedicated to making adoption of the vocabulary scalable across data curators and domain ontologies, a workshop was convened in March 2019 at the Marine Institute in Dublin, Ireland to investigate this capability by aligning the efforts of data curators, curators of authoritative thesauri, and knowledge modelers developing reference ontologies. As these three agents individually curate dataset parameter descriptions adopting some reference to related terms in PUV bridges the semantic gaps between them that prevent cross-cutting data discovery and data integrations on a global scale. Further, adoption from data repository to authoritative thesaurii is a more manageable step given the throughput of its data submissions than directly to refernce ontologies. Coincidentally, the step from thesaurii to reference ontology is made manageable given use cases to that identify groups of parameters that could benefit grom ontological mappings. The exchange of information that could occur through PUV creates a new virtual organization[1] that needs its own effective workflows for sending, receiving and digesting structured data.  This latter case is likely to grow more dominant in the emerging world of linked and distributed data; thus, developing stable inter-organizational workflows is a priority.  The workshop will not focus on the internal process of each agent, but on the transport vectors between agents to ensure efficient delivery and assimilation of data with respect to each agent’s internal governance needs.  As a result, the information exchange between these types of agents enables a new capability in science to deliver outcomes that meet initiatives such as United Nations - Sustainable Development Goals (SDGs)[2], Global Ocean Observing System - Essential Ocean Variables (EOVs)[3], and the Group on Earth Observations - Essential Biodiversity Variables (EBVs)[4].
 
 == Background
 
@@ -53,4 +66,4 @@ The work described in this paper was funded through the National Science Foundat
 
 [5] Moncoiffé, G., & Kokkinaki, A. (2018). The BODC Parameter Usage Vocabulary (PUV) semantic model exposed. Bollettino Di Geofisica, Vol. 59, Supplement 1, 36. Retrieved from http://www3.ogs.trieste.it/bgta/provapage.php?id_articolo=757
 
-
+[6] Leadbetter, A. M. (2015). Linked Ocean Data. The Semantic Web in Earth and Space Science. Current Status and Future Directions, 20, 11–31. doi:10.3233/978-1-61499-501-2-11
