rewrote abstract based on outline.

--- a/vocabs-best-practices-note.adoc
+++ b/vocabs-best-practices-note.adoc
@@ -17,21 +17,20 @@ __^1^Biological and Chemical Oceanography Data Management Office, Woods Hole Oce
 ^5^British Oceanographic Data Centre, United Kingdom__ +
 
 === Outline
-* _long history of controlled vocabs in ocean sciences_
-* _however, answering the cross-disciplinary questions to environment's grand challenges is difficult without interoperability between data repositories using reference ontologies_
-* _(bottom-up difficulty) velocity of data contributed at repositories makes it difficult to scale usage parameters up to ontologies_
-* _(top-down difficulty) further, its difficult to globally align repositories around one ontology_
+* answering the environment's grand challenges is difficult without interoperability between data repositories and reference ontologies_
+* _velocity of data contributed at repositories makes it difficult to scale usage parameters up to ontologies_
 * _authoritative thesaurii could play a critical role in solving the challenges between repositories and reference ontologies_
 * _in March 2019, a workshop was convened to explore the possibilities for scaling repository adoption of concepts in thesaurii and for scaling the elevation of topical thesaurii terms to reference ontologies_
 * _by vertically aligning data repositories, authoritative thesaurii, and reference ontologies, repositories inherit the semantics of reference ontologies and reference ontologies can be used to discover and integrate data form repositories for answering the grand challenges in multi-disciplinary science_
 
 == Abstract
 
-The ocean sciences have a long history of using controlled vocabularies and best practices for Linked Data on the Web to describe dataset parameters. The NERC Parameter Usage Vocabulary (PUV) stands as a relevant, comprehensive resource for describing the parameters of a dataset enabling improved discovery and interoperability of ocean data. With its publicized semantic model[5], the PUV is easier to adopt at varying levels of need. Coupled with efforts to make it easier for community-contributed terms to be added to the vocabulary, the PUV is poised for increased adoption by external metadata curators and alignment to domain ontologies. With the British Oceanographic Data Centre (BODC), the host institution for the PUV, dedicated to making adoption of the vocabulary scalable across data curators and domain ontologies, a workshop was convened in March 2019 at the Marine Institute in Dublin, Ireland to investigate this capability by aligning the efforts of data curators, curators of authoritative thesauri, and knowledge modelers developing reference ontologies. As these three agents individually curate dataset parameter descriptions adopting some reference to related terms in PUV bridges the semantic gaps between them that prevent cross-cutting data discovery and data integrations on a global scale. Further, adoption from data repository to authoritative thesaurii is a more manageable step given the throughput of its data submissions than directly to refernce ontologies. Coincidentally, the step from thesaurii to reference ontology is made manageable given use cases to that identify groups of parameters that could benefit grom ontological mappings. The exchange of information that could occur through PUV creates a new virtual organization[1] that needs its own effective workflows for sending, receiving and digesting structured data.  This latter case is likely to grow more dominant in the emerging world of linked and distributed data; thus, developing stable inter-organizational workflows is a priority.  The workshop will not focus on the internal process of each agent, but on the transport vectors between agents to ensure efficient delivery and assimilation of data with respect to each agent’s internal governance needs.  As a result, the information exchange between these types of agents enables a new capability in science to deliver outcomes that meet initiatives such as United Nations - Sustainable Development Goals (SDGs)[2], Global Ocean Observing System - Essential Ocean Variables (EOVs)[3], and the Group on Earth Observations - Essential Biodiversity Variables (EBVs)[4].
+Answering the environment's grand challenges is difficult without interoperability between data repositories and reference ontologies. However, the velocity of data contributed to repositories makes the knowledge modeling at ontologies unscalable. 
+As an authoritative thesaurus the NERC Parameter Usage Vocabulary (PUV) hosted at the Britich Oceanographic Data Centre (BODC) stands as a relevant, comprehensive resource for describing the parameters of ocean datasets. With its publicized semantic model[5], the PUV is now easier to adopt at varying levels of need across repositories. Data repository curators can suggest new PUV terms with increased efficiency, and with increasing adoption at the repository level, reference ontologies such as the Environment Ontology (ENVO) can align PUV terms to knowledge models. Ontologies can now be used to answer cross-disciplinary questions with supporting data at the repositories connected to the ontologies through thesaurii. The exchange of information that could occur through PUV creates a new virtual organization[1] that needs its own effective workflows for sending, receiving and digesting structured data. This latter case is likely to grow more dominant in the emerging world of linked and distributed data; thus, developing stable inter-organizational workflows is a priority. In March 2019 at the Marine Institute in Dublin, Ireland, a workshop brought together data curators, authoritative thesaurii, and domain ontologists to investigate this capability of developing workflows for scaling repository adoption of concepts in thesaurii and for elevating topical thesaurii terms to reference ontologies. After discussing the internal process of each agent, the workshop focused on the transport vectors between agents to ensure efficient delivery and assimilation of data with respect to each agent’s internal governance needs. The resulting workflows enable an information exchange between agents that provide a new capability in science to deliver outcomes that meet initiatives such as United Nations - Sustainable Development Goals (SDGs)[2], Global Ocean Observing System - Essential Ocean Variables (EOVs)[3], and the Group on Earth Observations - Essential Biodiversity Variables (EBVs)[4].
 
 == Background
 
-Information sharing, synthesis, and packaging is critical to delivering knowledge in multi-disciplinary contexts within research, but even more so when engaging with multi-stakeholder, cross-cutting initiatives like the EOVs, EBVs, and SDGs.  To do so, machine-readable ontologies harmonizing the meaning (i.e. semantics) behind each stakeholder’s terminology and metadata are required to deliver accurate information to these initiatives.  However, the development of high quality ontologies often cannot keep pace with the complete volume of observation types created in modern, integrative data systems. .  However, we have realized that a system combining 1) ontologies to handle semantically dense or problematic terminology and 2) authoritative thesauri to thematically describe and categorize more straightforward observations, will provide a basis to boost FAIRness in a practical and sustainable way .   In this system, ontologies interface with data curators and thesauri developers when the rich, machine-readable expressiveness of their ontologies is needed to resolve ambiguity or allow more flexible information handling than thesauri can provide. Further,  analytics term usage in the system can identify popular thesauri terms as high-value targets for ontologies to expand on. .  Consequently, the most active, day-to-day interface in this system is that between data curators and thesauri. Here, there is a need for efficiency gains that respect the governance processes of the thesauri, but deliver expedited results for data curators, leveraging tools for automatic term creation along constrained semantic frameworks (which ease coordination with ontology developers). As a result, the thesauri become the structured glue between instance data held by curators and the reference ontologies for delivering the outcomes required by SDGs, EOVs, and research themes.
+The ocean sciences have a long history of using controlled vocabularies and best practices for Linked Data on the Web to describe dataset parameters[6]. ... Information sharing, synthesis, and packaging is critical to delivering knowledge in multi-disciplinary contexts within research, but even more so when engaging with multi-stakeholder, cross-cutting initiatives like the EOVs, EBVs, and SDGs.  To do so, machine-readable ontologies harmonizing the meaning (i.e. semantics) behind each stakeholder’s terminology and metadata are required to deliver accurate information to these initiatives.  However, the development of high quality ontologies often cannot keep pace with the complete volume of observation types created in modern, integrative data systems. However, we have realized that a system combining 1) ontologies to handle semantically dense or problematic terminology and 2) authoritative thesauri to thematically describe and categorize more straightforward observations, will provide a basis to boost FAIRness in a practical and sustainable way .   In this system, ontologies interface with data curators and thesauri developers when the rich, machine-readable expressiveness of their ontologies is needed to resolve ambiguity or allow more flexible information handling than thesauri can provide. Further,  analytics term usage in the system can identify popular thesauri terms as high-value targets for ontologies to expand on. .  Consequently, the most active, day-to-day interface in this system is that between data curators and thesauri. Here, there is a need for efficiency gains that respect the governance processes of the thesauri, but deliver expedited results for data curators, leveraging tools for automatic term creation along constrained semantic frameworks (which ease coordination with ontology developers). As a result, the thesauri become the structured glue between instance data held by curators and the reference ontologies for delivering the outcomes required by SDGs, EOVs, and research themes.
 
 
 
